Update the seed.

--- a/db/seeds/pages/home/info/presse.html
+++ b/db/seeds/pages/home/info/presse.html
@@ -26,7 +26,7 @@
 <br>
 
 
-<p><a href="/uploads/file/98/Egloff.pdf" style="margin-left: 255px"><img src="/uploads/file/99/Egloff.png" title="Zeitungsartikel" alt="pinto"></a></p>
+<p><a href="/uploads/file/98/Egloff.pdf"><img src="/uploads/file/99/Egloff.png" title="Zeitungsartikel" alt="pinto"></a></p>
 
 <br>
 
